# altcoin-trend-system

./: .gitignore  README.md  pyproject.toml
config/: acts.env.example
docs/strategy/: current-strategy.md
docs/superpowers/plans/: 2026-04-18-altcoin-trend-system-mvp.md  2026-04-18-task-4-resampling-indicator-math.md  2026-04-19-backfill-pagination-derivatives-confirmation.md  2026-04-19-rank-alerts-backtest.md  2026-04-24-ultra-baseline-validation.md  (+4 more)
scripts/: autoresearch_signal_rules.py  backfill_market_history.py  run_validation_evidence_package.py  validate_ultra_signal_production.py
sql/: 002_raw_exchange.sql  006_signal_v2_fields.sql
src/altcoin_trend/: backtest.py  cli.py  config.py  daemon.py  db.py  health.py  models.py  scheduler.py  trade_backtest.py
systemd/user/: altcoin-trend.service
tests/: test_alerts.py  test_backtest.py  test_bootstrap.py  test_cli.py  test_config.py  test_daemon.py  test_db_migrations.py  test_db_schema.py  test_derivatives.py  test_exchange_contracts.py  test_explain.py  test_health.py  test_incremental_sync.py  test_indicators.py  test_rate_limit.py  test_relative_strength.py  test_repair.py  test_resample.py  test_run_validation_evidence_package.py  test_scheduler.py  test_scoring.py  test_service_files.py  test_signal_v2.py  test_state.py  test_trade_backtest.py  test_trade_candidate.py  test_validate_signal_db_smoke.py  test_validate_signal_semantics.py  test_validate_ultra_signal_production.py
tests/fixtures/: binance_exchange_info.json  binance_kline_ws.json  bybit_instruments_info.json  bybit_kline_ws.json
(+42 files in other folders)
