[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altcoin-trend-system"
version = "0.1.0"
description = "Minute-to-hour altcoin USDT perpetual trend ranking daemon"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "psycopg[binary]>=3.1.19",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1"]

[project.scripts]
acts = "altcoin_trend.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
altcoin_trend = ["migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
